cmake_minimum_required(VERSION 3.21)
project(Parcial_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Parcial_2 main.cpp Empleado.cpp Empleado.h Administrativo.cpp Administrativo.h Profesional.cpp Profesional.h CuentaBancaria.cpp CuentaBancaria.h TarjetaCredito.cpp TarjetaCredito.h SistemaGestion.cpp SistemaGestion.h)
